<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AdapterTesting</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="addPlayer">Add</string>
    <string name="pname">Player Name</string>
    <string name="startTimer">Start</string>
    <string name="clearTimer">Clear</string>
    <string name="showResults">Results</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="start_race">Start</string>
    <string name="race_name">Race Name</string>
    <string name="title_activity_results">ResultsActivity</string>

</resources>