<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/player_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/pname" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="addPlayer"
        android:text="@string/addPlayer" />
    
    <TextView
        android:id="@+id/clkTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addButton"
        android:text="Dummy"
        />
    
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/clkTextView"
        android:onClick="startTimer"
        android:text="@string/startTimer" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="startAllTimer"
        android:text="Start All" />
    
    <Button 
        android:layout_below="@id/clkTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text = "@string/clearTimer"
        android:onClick = "clearTimer"
        />
    
    <Button 
        android:layout_below="@id/clkTextView"
        android:layout_width="100dp"
        android:id="@+id/showResults"
        android:layout_height="wrap_content"
        android:text = "@string/showResults"
        android:layout_alignParentRight="true"
        android:onClick = "showResults"
   		/>
    
    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/showResults"
        android:columnWidth="150dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

</RelativeLayout>